# area-calculator

./: CMakeLists.txt
include/: ACGrid.h  ACLine.h  ACPoint.h  ACShape.h  ACShapeHandler.h  ACTriangle.h  LinkedList.h  circvec.h  formulas.h  gridsize.h  winsize.h
src/: ACGrid.cpp  ACLine.cpp  ACPoint.cpp  ACPoint.h  ACShape.cpp  ACShapeHandler.cpp  ACTriangle.cpp  formulas.h  main.cpp
